# gtk-vala-template

./: .editorconfig  GTK-Vala-Template.doap  LICENSE  README.md  create-project  meson.build  meson_options.txt
.github/workflows/: flatpak.yml
build-aux/flatpak/: com.github.nahuelwexd.GtkValaTemplate.json
build-aux/meson/: post-install.py
data/: com.github.nahuelwexd.GtkValaTemplate.desktop.in.in  com.github.nahuelwexd.GtkValaTemplate.gschema.xml.in  com.github.nahuelwexd.GtkValaTemplate.metainfo.xml.in.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: app.vala  main-window.ui  main-window.vala  meson.build  shortcuts.ui  styles.css  ui-resources.xml
vapi/: config.vapi
